--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span id="distance"></span>
         </div>
         <div id="diff"></div>
-        <script src="/static/js/levenshtein.js"></script>
+        <script src="./levenshtein.js"></script>
         <script>
             var oldstr = document.getElementById('oldstr');
             var newstr = document.getElementById('newstr');
